<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home_map">

    <fragment
        android:id="@+id/navigation_home_map"
        android:name="com.example.app3.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_map" />

    <fragment
        android:id="@+id/navigation_navigator"
        android:name="com.example.app3.ui.navigator.NavigatorFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_navigator" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.app3.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>