<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/layout_bottom_sheet_bg"
    android:paddingVertical="@dimen/size20">
<androidx.core.widget.NestedScrollView
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/reserve_icon"
        android:layout_width="@dimen/size10"
        android:layout_height="@dimen/size10"
        android:layout_marginStart="@dimen/size20"
        android:contentDescription="@string/toDo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_reserved"
        app:tint="@color/warning" />
    <TextView
        android:id="@+id/reserve_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size5"
        app:layout_constraintStart_toEndOf="@id/reserve_icon"
        app:layout_constraintTop_toTopOf="@id/reserve_icon"
        app:layout_constraintBottom_toBottomOf="@id/reserve_icon"
        tools:text="Reserve Parking at"
        android:text="@string/bottomsheet_reserved_label"
        style="@style/TextAppearance"
        android:textColor="@color/warning"
        />
    <TextView
        android:id="@+id/owner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size5"
        app:layout_constraintStart_toEndOf="@id/reserve_label"
        app:layout_constraintTop_toTopOf="@id/reserve_label"
        app:layout_constraintBottom_toBottomOf="@id/reserve_label"
        tools:text="David's Spot"
        style="@style/TextAppearance"
        />

    <TextView
        android:id="@+id/parking_type_label"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size4"
        app:layout_constraintTop_toBottomOf="@id/owner_label"
        app:layout_constraintStart_toStartOf="@id/reserve_label"
        app:layout_constraintEnd_toStartOf="@id/price_label"
        android:textAlignment="viewStart"
        android:hint="@string/toDo"
        tools:text="On Spot Parking"
        android:ellipsize="end"
        style="@style/TextAppearanceBold"
        />

    <TextView
        android:id="@+id/price_label"
        android:layout_marginEnd="@dimen/size32"
        style="@style/TextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/font20"
        android:textColor="@color/primary"
        tools:text="50£" />

    <TextView
        android:id="@+id/price_period_label"
        style="@style/TextAppearance"
        app:layout_constraintTop_toBottomOf="@id/price_label"
        app:layout_constraintStart_toStartOf="@id/price_label"
        app:layout_constraintEnd_toEndOf="@id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/toDo"
        android:textAlignment="center"
        android:textSize="@dimen/font10"
        android:text="@string/bottomsheet_price_period_label"
        tools:text="for hr" />

<!--    -->
    <ImageView
        android:id="@+id/icon_car"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size16"
        android:layout_marginTop="@dimen/size10"
        app:layout_constraintTop_toBottomOf="@id/parking_type_label"
        app:layout_constraintStart_toStartOf="@id/parking_type_label"
        android:contentDescription="@string/toDo"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_car"/>

    <TextView
        android:id="@+id/availability_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size8"
        app:layout_constraintStart_toEndOf="@id/icon_car"
        app:layout_constraintTop_toTopOf="@id/icon_car"
        app:layout_constraintBottom_toBottomOf="@id/icon_car"
        android:textSize="@dimen/font10"
        android:hint="@string/toDo"
        tools:text="15 Car Spots"
        style="@style/TextAppearance"
        />

    <ImageView
        android:id="@+id/icon_distance"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size16"
        android:layout_marginStart="@dimen/size20"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@id/availability_label"
        app:layout_constraintTop_toTopOf="@id/availability_label"
        app:layout_constraintBottom_toBottomOf="@id/availability_label"
        android:contentDescription="@string/toDo"
        android:src="@drawable/ic_human_distance"/>

    <TextView
        android:id="@+id/distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size8"
        app:layout_constraintStart_toEndOf="@id/icon_distance"
        app:layout_constraintTop_toTopOf="@id/icon_distance"
        app:layout_constraintBottom_toBottomOf="@id/icon_distance"
        android:textSize="@dimen/font10"
        android:hint="@string/toDo"
        tools:text="26 km away"
        style="@style/TextAppearance"
        />
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/first_divider"
        android:layout_width="@dimen/size0"
        android:layout_height="@dimen/size1"
        android:layout_marginEnd="@dimen/size24"
        android:layout_marginStart="@dimen/size24"
        android:layout_marginTop="@dimen/size10"
        app:layout_constraintTop_toBottomOf="@id/icon_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/warning"/>
<LinearLayout
    android:id="@+id/first_layout"
    android:layout_width="@dimen/size0"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size5"
    app:layout_constraintTop_toBottomOf="@id/first_divider"
    app:layout_constraintStart_toStartOf="@id/first_divider"
    app:layout_constraintEnd_toEndOf="@id/first_divider"
    android:orientation="horizontal"
    android:gravity="center">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_call"
        app:iconTint="@color/subtitle"
        style="@style/TextButton"
        android:text="@string/bottomsheet_call_button"
        tools:text="Call"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/directions_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size28"
        android:layout_marginEnd="@dimen/size28"
        app:icon="@drawable/ic_directions"
        app:iconTint="@color/subtitle"
        style="@style/TextButton"
        android:text="@string/bottomsheet_directions_button"
        tools:text="Directions"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_share"
        app:iconTint="@color/subtitle"
        style="@style/TextButton"
        android:text="@string/bottomsheet_share_button"
        tools:text="Share"/>
</LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/second_divider"
        android:layout_width="@dimen/size0"
        android:layout_height="@dimen/size1"
        android:layout_marginTop="@dimen/size5"
        app:layout_constraintTop_toBottomOf="@id/first_layout"
        app:layout_constraintStart_toStartOf="@id/first_layout"
        app:layout_constraintEnd_toEndOf="@id/first_layout"
        android:backgroundTint="@color/warning"/>
    <TextView
        android:id="@+id/information_title_label"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size4"
        android:layout_marginEnd="@dimen/size10"
        app:layout_constraintTop_toBottomOf="@id/second_divider"
        app:layout_constraintStart_toStartOf="@id/icon_car"
        app:layout_constraintEnd_toEndOf="@id/second_divider"
        android:textAlignment="viewStart"
        android:hint="@string/toDo"
        tools:text="Info"
        android:text="@string/bottomsheet_information_title"
        android:ellipsize="end"
        style="@style/TextAppearanceBold"
        />
    <TextView
        android:id="@+id/information_label"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size8"
        app:layout_constraintTop_toBottomOf="@+id/information_title_label"
        app:layout_constraintStart_toStartOf="@+id/information_title_label"
        app:layout_constraintEnd_toEndOf="@+id/information_title_label"
        android:hint="@string/toDo"
        android:textAlignment="viewStart"
        android:lineSpacingExtra="@dimen/size10"
        android:text="@string/bottomsheet_information_label"
        tools:text="They offer 24/7 access to our parking lot, we know you may need your vechile at any given point of time while offering a 25 % cashback on the base amount if the parking experience ....  Read More"
        style="@style/TextAppearance"
        />

    <TextView
        android:id="@+id/price_title_label"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size10"
        app:layout_constraintTop_toBottomOf="@id/information_label"
        app:layout_constraintStart_toStartOf="@id/information_label"
        app:layout_constraintEnd_toEndOf="@id/information_label"
        android:textAlignment="viewStart"
        android:hint="@string/toDo"
        tools:text="Price Tariff"
        android:text="@string/bottomsheet_price_title"
        android:ellipsize="end"
        style="@style/TextAppearanceBold"
        />
    <TextView
        android:id="@+id/price_information_label"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size8"
        app:layout_constraintTop_toBottomOf="@+id/price_title_label"
        app:layout_constraintStart_toStartOf="@+id/price_title_label"
        app:layout_constraintEnd_toEndOf="@+id/price_title_label"
        android:hint="@string/toDo"
        android:textAlignment="viewStart"
        android:lineSpacingExtra="@dimen/size10"
        tools:text="you can change the duration of booking by selecting any one of the options below"
        android:text="@string/bottomsheet_price_information_label"
        style="@style/TextAppearance"
        />

        <TextView
            android:id="@+id/weekdays_title_label"
            android:layout_width="@dimen/size0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10"
            app:layout_constraintTop_toBottomOf="@id/price_information_label"
            app:layout_constraintStart_toStartOf="@id/price_information_label"
            app:layout_constraintEnd_toEndOf="@id/price_information_label"
            android:textAlignment="viewStart"
            android:hint="@string/toDo"
            tools:text="Weekdays"
            android:text="@string/bottomsheet_weekdays_title"
            android:ellipsize="end"
            style="@style/TextAppearanceBold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weekdays_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weekdays_title_label"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/weekdays_item"
            tools:itemCount="4"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/weekends_title_label"
            android:layout_width="@dimen/size0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10"
            app:layout_constraintTop_toBottomOf="@id/weekdays_recyclerview"
            app:layout_constraintStart_toStartOf="@id/price_information_label"
            app:layout_constraintEnd_toEndOf="@id/price_information_label"
            android:textAlignment="viewStart"
            android:hint="@string/toDo"
            tools:text="Weekends"
            android:text="@string/bottomsheet_weekends_title"
            android:ellipsize="end"
            style="@style/TextAppearanceBold"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weekends_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weekends_title_label"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/weekdays_item"
            tools:itemCount="4"
            android:orientation="horizontal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="31dp"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/toDo"
            android:src="@drawable/ic_reserved"/>
        <TextView
            android:id="@+id/spots_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size10"
            tools:text="15 Spots"
            android:textColor="@color/available"
            style="@style/TextAppearance"/>
        <TextView
            android:id="@+id/spots_availability_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size3"
            tools:text="Available"
            android:text="@string/bottomsheet_spots_availabilitt_label"
            style="@style/TextAppearance"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size20"
            tools:text="Reserve for: 500$\n3hr-4hr:"
            android:text="@string/toDo"
            android:backgroundTint="@color/primary"
            app:cornerRadius="@dimen/size6"
            android:textColor="@color/white"
            android:fontFamily="@font/std"
            style="@style/TextButton"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>